<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".LoginUser">

    <ImageView
        android:id="@+id/cornerBg"
        android:layout_width="176dp"
        android:layout_height="169dp"
        android:contentDescription="@string/cornerlayout"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        app:srcCompat="@drawable/corner_shape"
        tools:ignore="UnknownIdInLayout" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="143dp"
        android:layout_height="119dp"
        android:layout_marginBottom="352dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="460dp"
        android:contentDescription="@string/welcomeagaintext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cornerBg"
        app:layout_constraintVertical_bias="0.53"
        app:srcCompat="@drawable/welcome_again" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:background="@drawable/roundstyle"
        android:backgroundTint="#fff"
        android:ems="10"
        android:foregroundTint="#fff"
        android:hint="@string/podaj_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="75dp"
        android:autofillHints=""
        android:background="@drawable/roundstyle"
        android:backgroundTint="#fff"
        android:ems="10"
        android:foregroundTint="#fff"
        android:hint="@string/podajHaslo"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

    <TextView
        android:id="@+id/passwordRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="26dp"
        android:text="@string/forgotPassword"
        android:textColor="#50C2C9"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="365dp"
        android:layout_height="64dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="88dp"
        android:background='@drawable/roudstylebtn'
        android:text="@string/zalogujSie"
        android:textColor="#FFFFFF"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:rippleColor="#50C2C9"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewNoAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="68dp"
        android:text="@string/nie_posiadasz_konta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="63dp"
        android:text="@string/zarejestrujSie"
        android:textColor="#50C2C9"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewNoAcc"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.47000003"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>