<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".RegisterUser">

    <ImageView
        android:id="@+id/cornerBg"
        android:layout_width="176dp"
        android:layout_height="169dp"
        android:contentDescription="@string/cornerlayout"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toStartOf="@+id/logo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        app:srcCompat="@drawable/corner_shape" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="143dp"
        android:layout_height="119dp"
        android:layout_marginBottom="352dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/welcomeText"
        android:layout_width="369dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="368dp"
        android:contentDescription="@string/welcometext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/welcome" />

    <EditText
        android:id="@+id/registerName"
        android:fontFamily="@font/poppins"
        android:layout_width="367dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="302dp"
        android:autofillHints=""
        android:background="@drawable/roundstyle"
        android:backgroundTint="#fff"
        android:ems="10"
        android:foregroundTint="#fff"
        android:hint="@string/podajImie"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/registerSurname"
        android:fontFamily="@font/poppins"
        android:layout_width="367dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="241dp"
        android:autofillHints=""
        android:background="@drawable/roundstyle"
        android:backgroundTint="#fff"
        android:ems="10"
        android:foregroundTint="#fff"
        android:hint="@string/podajNazwisko"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerName"
        app:layout_constraintVertical_bias="0.060000002" />

    <EditText
        android:id="@+id/registerEmail"
        android:fontFamily="@font/poppins"
        android:layout_width="367dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="190dp"
        android:autofillHints=""
        android:background="@drawable/roundstyle"
        android:backgroundTint="#fff"
        android:ems="10"
        android:foregroundTint="#fff"
        android:hint="@string/podaj_email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerSurname"
        app:layout_constraintVertical_bias="0.07999998" />

    <EditText
        android:id="@+id/registerPassword"
        android:fontFamily="@font/poppins"
        android:layout_width="366dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="180dp"
        android:autofillHints=""
        android:background="@drawable/roundstyle"
        android:backgroundTint="#fff"
        android:ems="10"
        android:foregroundTint="#fff"
        android:hint="@string/podajHaslo"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail"
        app:layout_constraintVertical_bias="0.01999998" />

    <EditText
        android:id="@+id/registerPasswordRepeat"
        android:fontFamily="@font/poppins"
        android:layout_width="367dp"
        android:layout_height="48dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="144dp"
        android:autofillHints=""
        android:background="@drawable/roundstyle"
        android:backgroundTint="#fff"
        android:ems="10"
        android:foregroundTint="#fff"
        android:hint="@string/powtorzHaslo"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="365dp"
        android:layout_height="64dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="22dp"
        android:background='@drawable/roudstylebtn'
        android:text="@string/zarejestrujSie"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#50C2C9"
        android:textStyle="bold"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/haveAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordRepeat"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="#5CEAF3" />

    <TextView
        android:id="@+id/haveAcc"
        android:layout_width="155dp"
        android:layout_height="25dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="@font/poppins"
        android:text="@string/posiadaszJuzKonto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/zalogujSie"
        android:textColor="#50C2C9"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/haveAcc"
        app:layout_constraintTop_toBottomOf="@+id/registerBtn"
        app:layout_constraintVertical_bias="0.327"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>